Fixing relative urls

--- a/site/assets/templates/base.html
+++ b/site/assets/templates/base.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="author" content="{{site.author}}" />
 
-		<link rel="stylesheet" href="/styles/bootstrap.min.css">
-		<link rel="stylesheet" href="/styles/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="styles/bootstrap.min.css">
+		<link rel="stylesheet" href="styles/bootstrap-theme.min.css">
 
 		<style>
 			html {
@@ -130,9 +130,9 @@
 				<p class="muted credit"><a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
 			</div>
 		</footer>
-		<script src="/scripts/jquery.min.js"></script>
-		<script src="/scripts/bootstrap.min.js"></script>
-		<script src="/scripts/run_prettify.js"></script>
+		<script src="scripts/jquery.min.js"></script>
+		<script src="scripts/bootstrap.min.js"></script>
+		<script src="scripts/run_prettify.js"></script>
 
 		<script type="text/javascript">
 			var _gaq = _gaq || [];
