--- a/site/assets/templates/base.html
+++ b/site/assets/templates/base.html
@@ -106,7 +106,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="/">Apex Styleguide</a>
+					<a class="navbar-brand" href="index.html">Apex Styleguide</a>
 				</div>
 				<div class="navbar-collapse collapse">
 				</div>
@@ -116,6 +116,7 @@
 			<div class="row">
 				<div class="col-sm-3 col-md-2 sidebar">
 					<ul class="nav nav-sidebar">
+						<li><a href="index.html">Home</a></li>
 						<li><a href="soql.html">SOQL</a></li>
 					</ul>
 				</div>
@@ -132,7 +133,9 @@
 		</footer>
 		<script src="scripts/jquery.min.js"></script>
 		<script src="scripts/bootstrap.min.js"></script>
+		<script src="scripts/anchor.min.js"></script>
 		<script src="scripts/run_prettify.js"></script>
+		<script src="scripts/app.js"></script>
 
 		<script type="text/javascript">
 			var _gaq = _gaq || [];
