--- a/site/assets/templates/base.html
+++ b/site/assets/templates/base.html
@@ -117,6 +117,7 @@
 				<div class="col-sm-3 col-md-2 sidebar">
 					<ul class="nav nav-sidebar">
 						<li><a href="index.html">Home</a></li>
+						<li><a href="annotations.html">Annotations</a></li>
 						<li><a href="soql.html">SOQL</a></li>
 					</ul>
 				</div>
