--- a/site/assets/templates/base.html
+++ b/site/assets/templates/base.html
@@ -116,9 +116,9 @@
 			<div class="row">
 				<div class="col-sm-3 col-md-2 sidebar">
 					<ul class="nav nav-sidebar">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="annotations.html">Annotations</a></li>
-						<li><a href="soql.html">SOQL</a></li>
+						<li {% if page.nav == "home" %}class="active"{% endif %}><a href="index.html">Home</a></li>
+						<li {% if page.nav == "annotations" %}class="active"{% endif %}><a href="annotations.html">Annotations</a></li>
+						<li {% if page.nav == "soql" %}class="active"{% endif %}><a href="soql.html">SOQL</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
